Melhora: Atualiza título da página HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>To-Do App</title>
+    <title>Aplicativo To-Do em Flask</title>
 </head>
 <body>
     <h1>To-Do List</h1>
