--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>To-Do List</h1>
     <form action="{{ url_for('add') }}" method="post">
-        <input type="text" name="task" placeholder="Nova tarefa" required>
+        <input type="text" name="task" placeholder="Digite sua nova tarefa aqui" required>
         <button type="submit">Adicionar</button>
     </form>
     <ul>
